# Candidatura_Automatica_NerdIn

./: README.md  pyproject.toml
nerdin_automation/: main.ipynb
